deployement/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-srh
  labels:
    app: portfolio-srh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-srh
  template:
    metadata:
      labels:
        app: portfolio-srh
    spec:
      containers:
      - name: portfolio-srh
        image: sarahth/portfolio-srh:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
